Begininng to implement mapping.

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,4 +5,4 @@ date: "(`r format(Sys.time(), '%d %B %Y')`)"
 output: github_document
 ---
 
-This repository serves as a coding example for simple data wrangling, geospatial mapping, and modeling of SNCF's (Société nationale des chemins de fer français), the French national railway, train delays from 2015 to 2018. A dashboard for this project can be found [here](https://mralph15.shinyapps.io/SNCF-Delays/).
+This repository serves as a coding example for data wrangling, geospatial mapping, and regression modeling of the SNCF's (Société nationale des chemins de fer français), the French National Railway Company, train delays from 2015 to 2018. A dashboard for this project can be found [here](https://mralph15.shinyapps.io/SNCF-Delays/).
